# brain-computer-interface

./: Makefile  README.md  processed_files.txt  pyproject.toml
notebooks/: application.ipynb  cnn_model.ipynb  enhancements.ipynb  visualization.ipynb
notebooks/backend/: delete_user.ipynb
notebooks/bcic_iv_2a/: Advanced_EEG_MI_CNN  bcic_iv_2a.ipynb  bcic_iv_2a_model.ipynb  model_visualization  openvibe_processing.ipynb
notebooks/bcic_iv_2b/: bcic_iv_2b.ipynb  model.ipynb
notebooks/data_processing/: livestream_processing_nb.ipynb  make_baseline_dataset_nb.ipynb  make_openvibe_dataset_nb.ipynb  make_physionet_dataset_nb.ipynb  make_user_dataset_nb.ipynb  user_processing_nb.ipynb
notebooks/overig/: cnn_model.ipynb  subject_based_model.ipynb  test.ipynb
notebooks/visualization/: visualization_edf.ipynb  visualization_gdf.ipynb
reports/: documents.txt
src/: predict.py
src/data_processing/: external_processing.py  livestream_processing.py  openvibe_processing.py  shared_processing.py  user_processing.py  user_processing2.py
src/make_dataset/: make_baseline_dataset.py  make_initial_baseline_dataset.py  make_openvibe_dataset.py  make_user_data.py
src/train_model/: train_user_model.py
src/update/: update_base_dataset.py  update_baseline_based_on_openvibe.py  update_baseline_based_on_openvibe2.py  update_user_model.py
users/new_user/: new_user_dataset.pt
users/training_both/: dataset_2024-06-09_20-43-48.pt  labels_2024-06-09_20-43-48.pt
