[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eeg_thesis_cnn"
version = "0.0.1"
description = "CNN model implementation for EEG MI"
authors = [
  { name = "Akram Chakrouni" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["eeg_thesis_cnn"]
force_sort_within_sections = true
